--- a/index.html
+++ b/index.html
@@ -116,7 +116,12 @@
 <body>
   <header>
     <h1>Predict. Prevent. Protect.</h1>
-    <p>SentinelStack is your all-in-one platform for AI compliance, audit-grade reporting and real-time security alerts. Built for EU AI Act and GDPR-era risk.</p>
+    <p>SentinelStack is the smart compliance layer for your AI systems. We help you prove, document, and maintain conformity with the EU AI Act through real-time risk detection, PDF audit reports and automated logging. Built for legal teams, fast-moving startups, and enterprise security.</p>
+    <ul style="list-style: none; padding: 0; max-width: 800px; margin: 1rem auto 2rem auto;">
+      <li style="color: #aff; margin: 0.5rem 0;">✔️ Installs in 5 minutes</li>
+      <li style="color: #aff; margin: 0.5rem 0;">✔️ EU-compliant audit PDFs out of the box</li>
+      <li style="color: #aff; margin: 0.5rem 0;">✔️ Designed for founders, lawyers and AI ops</li>
+    </ul>
     <a href="#plans" class="cta-button">Start Free Risk Assessment</a>
   </header>
 
